--- a/start.html
+++ b/start.html
@@ -4,117 +4,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Customizer (Bootstrap)</title>
+    <title>Subway Ceramics Consultation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="start-style.css">
 </head>
 
 <body>
-    <div class="container mt-2">
-        <div class="row d-flex justify-content-between" id="main-nav">
-            <div class="col-md-12">
-                <button class="btn btn-primary mt-3" data-view="inspirations">Inspirations</button>
-                <button class="btn btn-secondary mt-3" data-view="field-type">Field Types</button>
-                <button class="btn btn-warning mt-3" data-view="corners">Corners</button>
-                <button class="btn btn-success mt-3" data-view="base">Bases</button>
-                <button class="btn btn-danger mt-3" data-view="caps">P-Caps</button>
-                <button class="btn btn-info mt-3" data-view="startConsultBtn">Tile Calculator</button>
-
+    <div class="container-wide mt-4 me-5 ms-5">
+        <div class="row d-flex " id="main-nav">
+            <div class="col-md-4">
+                <h1 id="view-title" class="display-5">Inspirations</h1>
+            </div>
+            <div class="d-flex col-md-8 justify-content-end">
+                <button class="btn btn-theme1 mt-3 me-2" data-view="inspirations">Inspirations</button>
+                <button class="btn btn-theme1 mt-3 me-2" data-view="field-type">Field Types</button>
+                <button class="btn btn-theme1 mt-3 me-2" data-view="corners">Corners</button>
+                <button class="btn btn-theme1 mt-3 me-2" data-view="base">Bases</button>
+                <button class="btn btn-theme1 mt-3 me-2" data-view="cap-options">P-Caps</button>
+                <div class="position-relative mt-3 d-flex">
+                    <button class="btn btn-theme1" data-bs-toggle="modal" data-bs-target="#selectedItemsModal">
+                        <i class="bi bi-cart-fill"></i> View Selected
+                        <span id="selected-count-badge"
+                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            0
+                        </span>
+                    </button>
+                </div>
             </div>
         </div>
-
-
-        <main id="main-content" class="container">
+        <main id="main-content">
         </main>
-
-
     </div>
 
-    <template id="start-consult">
-
-    </template>
     <template id="inspirations">
-        <div class="text-center">
-            <h1 class="display-5">Inspiration Gallery</h1>
-            <p class="lead text-muted">Browse these images to get ideas for your project.</p>
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-4 mb-3">
-                <img src="banner image.png" class="img-fluid rounded" alt="Inspiration 1">
-            </div>
-            <div class="col-md-4 mb-3">
-                <img src="inspirations-2.jpg" class="img-fluid rounded" alt="Inspiration 2">
-            </div>
-            <div class="col-md-4 mb-3">
-                <img src="https://via.placeholder.com/400x300.png/E9ECEF/495057?text=Style+3" class="img-fluid rounded"
-                    alt="Inspiration 3">
-            </div>
-        </div>
+        <div id="inspirations-container" class="mt-4"></div>
     </template>
 
     <template id="field-type">
-        <div class="container my-5">
-            <nav class="navigation-arrows mb-4">
-                <a href="consult-start.html" class="btn btn-secondary">&larr; Back</a>
-                <!--a href="contact.html" class="btn btn-primary">Next&rarr;</a-->
-            </nav>
-            <div class="row align-items-center">
-                <div class="col-lg-8 mb-4 mb-lg-0">
-                    <img src="TileShape.png" class="img-fluid rounded shadow" alt="Tiled room">
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="card p-4 shadow-sm">
-                        <h1 class="h3 mb-3">Tile Calculator</h1>
-                        <form id="tileForm">
-                            <div class="mb-3">
-                                <label for="areaInput" class="form-label">Total Area (sq ft)</label>
-                                <input type="number" class="form-control" id="areaInput" placeholder="e.g., 120"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="tileSelect" class="form-label">Select Tile Size</label>
-                                <select class="form-select" id="tileSelect">
-                                    <option value="0.25">6" x 6" (66FT00)</option>
-                                    <option value="0.375">9" x 6" (69FT00)</option>
-                                    <option value="0.125">4 1/4" x 4.25" (44FT00)</option>
-                                    <option value="0.083">2" x 6" (25FT00)</option>
-                                    <option value="0.125">3" x 6" (36FT00)</option>
-                                    <option value="0.090">2 3/5" x 5" (33FT00)</option>
-                                    <option value="0.028">2" x 2" (36FT00)</option>
-                                    <option value="0.063">3" x 3" (36FT00)</option>
-                                    <option value="0.063">3" x 3" (33BV00)</option>
-                                </select>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Calculate</button>
-                        </form>
-                        <div id="result" class="alert mt-4" style="display: none;"></div>
-                    </div>
-                </div>
-            </div>
+        <div class="container-wide d-flex justify-content-center mt-4">
+            <div id="scrollable-grid-area" class="row"></div>
         </div>
 
-        <script src="tile-calculator.js"></script>
+        <!--div class="card w-100 shadow-sm mt-2">
+                <div class="card-body">
+                    <div class="text-center mb-4">
+                        <h1 class="display-5">Select Field Tile Style</h1>
+                        <p class="lead text-muted">Choose the field tile treatment for your project.</p>
+                    </div>
+                </div>
+            </div-->
+        </div>
     </template>
 
     <template id="corners">
-        <div class="container d-flex justify-content-center">
-            <div class="card w-100 shadow-sm mt-2">
+        <div class="container-wide d-flex justify-content-center mt-4">
+            <div id="scrollable-grid-area" class="row"></div>
+        </div>
+        <!--div class="container d-flex justify-content-center pe-0 ps-0">
+            <div class="card w-100 shadow-sm mt-3 ">
                 <div class="card-body">
                     <div class="text-center mb-4">
                         <h1 class="display-5">Select Corner Style</h1>
                         <p class="lead text-muted">Choose the corner treatment for your project.</p>
                     </div>
+                    <div id="scrollable-grid-area" class="row"></div>
+                </div>
+            </div>
+        </div-->
+    </template>
 
-                    <div class="scrollable-grid-area row">
+    <template id="base">
+        <div id="scrollable-grid-area" class="row mt-4"></div>
+
+        <!--div class="container d-flex justify-content-center">
+            <div class="card w-100 shadow-sm mt-2">
+                <div class="card-body">
+                    <div class="text-center mb-4">
+                        <h1 class="display-5">Select Base Style</h1>
+                        <p class="lead text-muted">Choose the base treatment for your project.</p>
+                    </div>
+                </div>
+            </div>
+        </div-->
+    </template>
+
+    <template id="cap-options">
+        <div id="scrollable-grid-area" class="row mt-4"></div>
+
+        <!--div class="container d-flex justify-content-center">
+            <div class="card w-100 shadow-sm mt-2">
+                <div class="card-body">
+                    <div class="text-center mb-4">
+                        <h1 class="display-5">Select Cap Options</h1>
+                        <p class="lead text-muted">Choose the cap treatment for your project.</p>
+                    </div>
+                </div>
+            </div>
+        </div-->
+    </template>
+
+    <!-- Selected Items Modal -->
+    <div class="modal fade" id="selectedItemsModal" tabindex="-1" aria-labelledby="selectedItemsModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="selectedItemsModalLabel">Your Selected Items</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul id="selected-items-list" class="list-group list-group-flush">
+                        <!-- Selected items will be dynamically inserted here -->
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <!--button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button-->
+                    <button type="button" class="btn btn-success" id="proceed-button" ${selectedItems.length===0
+                        ? 'hidden' : '' }>Proceed</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Expand component modal -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg-fullscreen">
+            <div class="modal-content bg-dark border-0">
+                <div class="modal-header border-0">
+                    <h5 class="modal-title text-light" id="imageModalLabel">Image Preview</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body d-flex justify-content-center align-items-center">
+                    <!-- This is the placeholder for the large image. We'll set its 'src' with JavaScript. -->
+                    <img src="" id="modalImage" alt="Large image preview">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- NEW: Modal for expanding a carousel -->
+    <div class="modal fade" id="carouselModal" tabindex="-1" aria-labelledby="carouselModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="carouselModalLabel">Style Preview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="carouselModalBody">
+                    <!-- A larger carousel will be injected here by JavaScript -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="start-script.js"></script>
+</body>
+
+
+
+</html>
+
+
+<!--
+
+ <div class="scrollable-grid-area row">
                         <div class="col-lg-4 col-md-6 pb-2 border border-1 ">
                             <div class="row text-center">
                                 <div class="col-12">
                                     <img src="src/corner/Corner1.png" class="image-3x3" alt="Rounded Corner">
                                 </div>
                             </div>
-                            <!--img src="src/corner/Corner1.png" class="image-3x3" alt="Rounded Corner"-->
+                            <img src="src/corner/Corner1.png" class="image-3x3" alt="Rounded Corner">
                             <div class="row image-3x3-caption">
                                 <div class="col-6 pl-0 align-left">
                                     <h5 class="card-title m-0">Corner 1</h5>
@@ -191,30 +257,49 @@
                                 </div>
                             </div>
                         </div>
+                    </div >
+
+
+        <div class="container my-5">
+            <nav class="navigation-arrows mb-4">
+                <a href="consult-start.html" class="btn btn-secondary">&larr; Back</a>
+                <-a href="contact.html" class="btn btn-primary">Next&rarr;</a->
+            </nav>
+            <div class="row align-items-center">
+                <div class="col-lg-8 mb-4 mb-lg-0">
+                    <img src="TileShape.png" class="img-fluid rounded shadow" alt="Tiled room">
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="card p-4 shadow-sm">
+                        <h1 class="h3 mb-3">Tile Calculator</h1>
+                        <form id="tileForm">
+                            <div class="mb-3">
+                                <label for="areaInput" class="form-label">Total Area (sq ft)</label>
+                                <input type="number" class="form-control" id="areaInput" placeholder="e.g., 120"
+                                    required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="tileSelect" class="form-label">Select Tile Size</label>
+                                <select class="form-select" id="tileSelect">
+                                    <option value="0.25">6" x 6" (66FT00)</option>
+                                    <option value="0.375">9" x 6" (69FT00)</option>
+                                    <option value="0.125">4 1/4" x 4.25" (44FT00)</option>
+                                    <option value="0.083">2" x 6" (25FT00)</option>
+                                    <option value="0.125">3" x 6" (36FT00)</option>
+                                    <option value="0.090">2 3/5" x 5" (33FT00)</option>
+                                    <option value="0.028">2" x 2" (36FT00)</option>
+                                    <option value="0.063">3" x 3" (36FT00)</option>
+                                    <option value="0.063">3" x 3" (33BV00)</option>
+                                </select>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Calculate</button>
+                        </form>
+                        <div id="result" class="alert mt-4" style="display: none;"></div>
                     </div>
                 </div>
             </div>
         </div>
-    </template>
 
-    <template id="base">
-        <div class="text-center">
-            <h1 class="display-5">Define the Base</h1>
-            <p class="lead text-muted">The base provides the foundation for the structure.</p>
-            <p class="text-muted mt-4"><small>Current time in Madison, WI is 8:08 AM.</small></p>
-        </div>
-    </template>
-
-    <template id="cap-type">
-        <div class="text-center">
-            <h1 class="display-5">Pick a Cap Type</h1>
-            <p class="lead text-muted">The cap sits on top of your project, providing a finished look.</p>
-        </div>
-    </template>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="start-script.js"></script>
-</body>
-
-</html>
+        <script src="tile-calculator.js"></script>
+-->
