--- a/start.html
+++ b/start.html
@@ -22,6 +22,11 @@
                 <button class="btn btn-theme1 mt-3 me-2" data-view="corners">Corners</button>
                 <button class="btn btn-theme1 mt-3 me-2" data-view="base">Bases</button>
                 <button class="btn btn-theme1 mt-3 me-2" data-view="cap-options">P-Caps</button>
+                <button class="btn btn-theme1 mt-3 me-2" data-view="special-conditions">Special Conditions</button>
+                <button class="btn btn-theme1 mt-3 me-2" id="view-notes-btn" data-bs-toggle="modal"
+                    data-bs-target="#notesModal">
+                    <i class="bi bi-pencil-square"></i>
+                </button>
                 <div class="position-relative mt-3 d-flex">
                     <button class="btn btn-theme1" data-bs-toggle="modal" data-bs-target="#selectedItemsModal">
                         <i class="bi bi-cart-fill"></i> View Selected
@@ -33,27 +38,20 @@
                 </div>
             </div>
         </div>
+
+        <!-- Main content area where different views will be rendered / all the data views -->
         <main id="main-content">
         </main>
     </div>
 
+    <!-- Templates for different views -->
     <template id="inspirations">
-        <div id="inspirations-container" class="mt-4"></div>
+        <div id="inspirations" class="mt-4"></div>
     </template>
 
     <template id="field-type">
         <div class="container-wide d-flex justify-content-center mt-4">
             <div id="scrollable-grid-area" class="row"></div>
-        </div>
-
-        <!--div class="card w-100 shadow-sm mt-2">
-                <div class="card-body">
-                    <div class="text-center mb-4">
-                        <h1 class="display-5">Select Field Tile Style</h1>
-                        <p class="lead text-muted">Choose the field tile treatment for your project.</p>
-                    </div>
-                </div>
-            </div-->
         </div>
     </template>
 
@@ -61,47 +59,33 @@
         <div class="container-wide d-flex justify-content-center mt-4">
             <div id="scrollable-grid-area" class="row"></div>
         </div>
-        <!--div class="container d-flex justify-content-center pe-0 ps-0">
-            <div class="card w-100 shadow-sm mt-3 ">
-                <div class="card-body">
-                    <div class="text-center mb-4">
-                        <h1 class="display-5">Select Corner Style</h1>
-                        <p class="lead text-muted">Choose the corner treatment for your project.</p>
-                    </div>
-                    <div id="scrollable-grid-area" class="row"></div>
-                </div>
-            </div>
-        </div-->
     </template>
 
     <template id="base">
         <div id="scrollable-grid-area" class="row mt-4"></div>
-
-        <!--div class="container d-flex justify-content-center">
-            <div class="card w-100 shadow-sm mt-2">
-                <div class="card-body">
-                    <div class="text-center mb-4">
-                        <h1 class="display-5">Select Base Style</h1>
-                        <p class="lead text-muted">Choose the base treatment for your project.</p>
-                    </div>
-                </div>
-            </div>
-        </div-->
     </template>
 
     <template id="cap-options">
         <div id="scrollable-grid-area" class="row mt-4"></div>
+    </template>
 
-        <!--div class="container d-flex justify-content-center">
-            <div class="card w-100 shadow-sm mt-2">
-                <div class="card-body">
-                    <div class="text-center mb-4">
-                        <h1 class="display-5">Select Cap Options</h1>
-                        <p class="lead text-muted">Choose the cap treatment for your project.</p>
+    <template id="special-conditions">
+        <div class="container-wide d-flex justify-content-center mt-4">
+            <div class="row">
+                <div class="col-md-3 scrollable-area">
+                    <div id="special-conditions-categories" class="row g-3">
+                    </div>
+                </div>
+                <div class="col-md-9 scrollable-area">
+                    <div id="special-conditions-options" class="row g-3">
+                        <!-- Options for the selected category will be rendered here -->
+                        <div class="col-12 text-center text-muted pt-5">
+                            <p class="lead">Please select a category from the left to see the options.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div-->
+        </div>
     </template>
 
     <!-- Selected Items Modal -->
@@ -144,7 +128,7 @@
         </div>
     </div>
 
-    <!-- NEW: Modal for expanding a carousel -->
+    <!--  Modal for expanding a carousel for Archetypes-->
     <div class="modal fade" id="carouselModal" tabindex="-1" aria-labelledby="carouselModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
@@ -153,20 +137,35 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="carouselModalBody">
-                    <!-- A larger carousel will be injected here by JavaScript -->
                 </div>
             </div>
         </div>
     </div>
 
-
-
+    <!-- Notes modal -->
+    <div class="modal fade" id="notesModal" tabindex="-1" aria-labelledby="notesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="notesModalLabel">Add a Note</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Your note for: <strong id="note-item-name"></strong></p>
+                    <textarea id="note-textarea" class="form-control" rows="5"
+                        placeholder="Type your notes here..."></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" id="save-note-btn" class="btn btn-primary">Save Note</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="start-script.js"></script>
 </body>
-
-
 
 </html>
 
